--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,3 +11,7 @@
         Girl Geek Meetup Hack Challenge
       = yield 
       // %script{:type => 'text/javascript', :src => '/javascripts/themex.js'}        
+      %h3
+        Source code available at
+        %a{:href => 'http://github.com/emmapersky/GGM-Voting'}GitHub
+      
